samples/_failures_safe/1761453417_786ba9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f86eb797.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_f86eb797.c:123:27: error: expected ‘)’ at end of input
  123 |                 if (j == p
      |                    ~      ^
      |                           )
./samples/SAFE/__tmp_f86eb797.c:123:17: error: expected declaration or statement at end of input
  123 |                 if (j == p
      |                 ^~
./samples/SAFE/__tmp_f86eb797.c:123:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f86eb797.c:123:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f86eb797.c:123:17: error: expected declaration or statement at end of input
